# synthesis

./: .darklua.json  .gitignore  .luau-analyze.json  Cargo.toml  LICENSE  README.md  aftman.toml  default.project.json  model.project.json  package.json  pseudo-enum.toml  serve.project.json  sourcemap.json  stylua.toml  type-test.json  wally.toml
code/: Enums.luau  PropUtil.luau  RobloxTypes.luau  Types.luau
code/Component/Button/: Theme.story.luau  init.luau
code/Component/Checkbox/: Defaults.luau  init.luau
code/Component/Container/: init.luau
code/Component/Padding/: init.luau
code/Component/PopUp/: Demo.story.luau  init.luau
code/Component/PopUpContainer/: init.luau  (+1 more)
code/Hook/: init.luau
code/Theme/: ColorUtil.luau  Scheme.luau  Solver.luau  init.luau
code/Transition/: Duration.luau  Easing.luau  init.luau
code/Typography/: init.luau
scripts/: build.sh  clear-build.sh  download-types.sh  init.sh  rojo-sourcemap.sh  serve.sh  validate.sh  wally-install.sh  wally-publish.sh
scripts/app/: build-types.sh  test.sh  translate.sh
scripts/type-gen/: gen.py  run.sh
scripts/workspace/: rojo-sourcemap.sh
src/: Enums.luau  PropUtil.luau  RobloxTypes.luau  Sounds.luau  TransitionRunner.luau  Types.luau  Typography.luau  framework.rs  init.luau  libs.rs  main.rs
src/Hook/: useLerp.luau  useSpring.luau
src/Style/: init.luau
src/Theme/: Blend.luau  Palette.story.luau  Scheme.story.luau  ThemeUtil.luau  init.luau
src/Transition/: Graph.story.luau  Runner.luau  Spring.story.luau  init.luau
src/Typography/: Solver.luau
to-do/Badge/: Defaults.luau
(+73 files in other folders)
