[package]
name = "synthetic"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.22", features = ["fs", "rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.1", features = ["derive"] }
full_moon = { version = "1.1.2", features = ["roblox", "serde", "luau"] }
reqwest = { version = "0.12.9", features = ["json"] }

[dev-dependencies]
lipsum = "0.9.1"
rstest = { version = "0.23" }
